--- a/assets/Css/Style.css
+++ b/assets/Css/Style.css
@@ -122,7 +122,7 @@ h3 {
     list-style-position: inside;
       }
 
-h3, p {
+h3, p:not(.titre) {
 padding-bottom: 2rem;
 }
 .fleche input{
@@ -144,7 +144,17 @@ footer article {
 hr {
    border-top: solid black;
 }
-footer p {
-    padding-top: 6rem;
 
+
+.titre{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    margin: 1rem 0;
+
+}
+footer :not(.titre){
+    display: flex;
+    justify-content: flex-end;
+    align-items: self-end;
 }
